# stapler

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  kill.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run.sh  tsconfig.json  vitest.config.ts
.cargo/: config.toml
.claude/: launch.json
.github/workflows/: pr.yml
crates/check-models/: Cargo.toml
crates/check-models/src/: detect.rs  main.rs  probe.rs  types.rs
crates/shared/: Cargo.toml
crates/shared/src/: attachments.rs  crypto.rs  finance.rs  lib.rs  mentions.rs  paths.rs  redaction.rs  validators.rs
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/resources/server/: package-lock.json  package.json
desktop/resources/server/onboarding-assets/ceo/: AGENTS.md
desktop/resources/server/onboarding-assets/default/: AGENTS.md
desktop/resources/server/ui-dist/: index.html
desktop/resources/server/ui-dist/assets/: _basePickBy-us4EPM4t.js  _baseUniq-BktZt5VI.js  arc-DxxwqMBt.js  architectureDiagram-VXUJARFQ-DR7zuepr.js  blockDiagram-VD42YOAC-9ERjirNE.js  c4Diagram-YG6GDRKO-Bf3eIwYc.js  channel-DCp1qPWL.js  chunk-4BX2VUAB-B2FbNtTg.js  chunk-55IACEB6-B3dw23Yw.js  chunk-B4BG7PRW-BDnIH_6W.js  chunk-DI55MBZ5-CkMwsVVR.js  chunk-FMBD7UC4-C3Ra9cSj.js  chunk-QN33PNHL-BRg_dUp3.js  chunk-QZHKN3VN-B3bzsOEy.js  chunk-TZMSLE5B-Wthi_2Uu.js  classDiagram-2ON5EDUG-CLtIwqeE.js  clone-C9mkYDRc.js  cose-bilkent-S5V4N54A-BNtyXjYI.js  dagre-6UL2VRFP-Duk4Q4iR.js  diagram-PSM6KHXK-51qDeAPN.js  diagram-QEK2KX5R-D1dmbk9C.js  diagram-S2PKOQOG-CDa9OewY.js  erDiagram-Q2GNP2WA-2FnY8p9u.js  flowDiagram-NV44I4VS-CAcTvY4Z.js  ganttDiagram-JELNMOA3-Dhpb71Kb.js  gitGraphDiagram-V2S2FVAM-BfiJcdD0.js  graph-DQwmT3cd.js  index-1aFqFZGj.js  index-BP23Frol.js  index-BTNcTv2F.js  index-BjFlCAae.js  index-Br4myQ2u.js  index-Bs9x0Zzp.js  index-Btac2HST.js  index-BxSp5_Z3.js  index-C7xSObh_.js  index-CBucQpSy.js  index-CHf1G1Bj.js  index-CJzFiARX.js  index-CLMb-1T3.js  (+28 more)
desktop/scripts/: download-node.sh  esbuild-server.mjs  prepare-sidecar.sh
desktop/src/: config.rs  lib.rs  loading.html  main.rs  server_manager.rs  workspace_commands.rs
doc/: SPEC-implementation.md
doc/llm/: adapter-config-inheritance.md  workspace-folder-config.md
doc/plans/: 2026-04-12-office-simulation.md  2026-04-12-rust-migration-phase0.md  2026-04-13-agent-prompt-template-generator.md  (+12 more)
native/: Cargo.toml
native/shared/: Cargo.toml  index.d.ts  index.js  package.json
native/shared/scripts/: build-native.mjs
native/shared/src/: lib.rs
native/skills-scanner/: Cargo.toml  index.d.ts  index.js  package.json
native/skills-scanner/.cargo/: config.toml
native/skills-scanner/scripts/: build-native.mjs
native/skills-scanner/src/: classify.rs  frontmatter.rs  hash.rs  lib.rs  napi_exports.rs  scan.rs  slug.rs  types.rs
native/skills-scanner/tests/: parity.rs
native/skills-scanner/tests/fixtures/: ws_basic.golden.json  ws_inline_yaml.golden.json  ws_project_root.golden.json
native/skills-scanner/tests/fixtures/ws_basic/: SKILL.md
native/skills-scanner/tests/fixtures/ws_basic/.agents/skills/release/: SKILL.md
native/skills-scanner/tests/fixtures/ws_basic/skills/.system/paperclip/: SKILL.md
native/skills-scanner/tests/fixtures/ws_basic/skills/find-skills/: SKILL.md
native/skills-scanner/tests/fixtures/ws_inline_yaml/: SKILL.md
native/skills-scanner/tests/fixtures/ws_project_root/: SKILL.md
patches/: @radix-ui__react-compose-refs@1.1.2.patch
scripts/: extract-adapter-models.ts  generate-company-assets.ts
server/: calculator.py  package.json  vitest.config.ts
ui/: package.json  vite.config.ts
(+310 files in other folders)
