[package]
name = "paperclip-desktop"
version = "0.3.1"
edition = "2021"
description = "Paperclip desktop app powered by Tauri"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
dirs = "6"
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "paperclip_desktop"
crate-type = ["lib", "cdylib", "staticlib"]
