[package]
name = "check-models"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "check-models"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
