[package]
name = "skills-scanner"
version = "0.1.0"
edition = "2021"
description = "Fast skill file discovery and hashing for Paperclip — Rust port of server/src/services/company-skills.ts (scan/hash/classify layer)"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
