[package]
name = "skills-scanner"
version = "0.1.0"
edition = "2021"
description = "Fast skill file discovery and hashing for Paperclip — Rust port of server/src/services/company-skills.ts (scan/hash/classify layer)"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stapler-shared = { path = "../../crates/shared" }
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = "3"
